--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "test": "jest"
   },
   "devDependencies": {
     "electron": "^29.4.6",
-    "electron-builder": "^23.6.0"
+    "electron-builder": "^23.6.0",
+    "jest": "^30.2.0"
   },
   "build": {
     "appId": "com.alessandrowillian.aiinteractionhub",
