Correção de ícone do systemtray

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
       "signAndEditExecutable": false
     },
     "linux": {
-      "target": ["AppImage", "deb"],
+      "target": [
+        "AppImage",
+        "deb"
+      ],
       "icon": "icons/hicolor/512x512/apps/aiinteractionhub.png",
       "category": "Network",
       "desktop": {
@@ -37,11 +40,18 @@
       "executableName": "ai-interaction-hub",
       "maintainer": "Alessandro Willian <noreply@aiinteractionhub.local>"
     },
+    "files": [
+      "**/*",
+      "!dist/",
+      "!node_modules/"
+    ],
     "extraResources": [
       {
         "from": "icons",
         "to": "icons",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ]
   }
